--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -11,7 +11,11 @@
   "bugs": {
     "url": "https://github.com/DinakaranS/-dynamic-mui/issues"
   },
+  "main": "dist-modules",
+  "module": "src",
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^5.0.0-alpha.28",
@@ -20,6 +24,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.16",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
@@ -39,7 +44,9 @@
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "dist:modules": "rimraf ./dist-modules && babel ./src --out-dir ./dist-modules",
+    "prepublish": "npm run dist:modules"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +67,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
     "eslint": "7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
