--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build",
+    "styleguide:build": "rimraf docs && styleguidist build && mkdir docs && mv styleguide/* docs",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "dist:modules": "rimraf ./dist-modules && babel ./src --out-dir ./dist-modules",
