--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -15,26 +15,28 @@
   "module": "src",
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.28",
-    "@material-ui/data-grid": "^4.0.0-alpha.23",
-    "@material-ui/styles": "^5.0.0-alpha.28",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^13.0.16",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-alpha.34",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
+    "@material-ui/lab": "^5.0.0-alpha.34",
+    "@material-ui/styles": "^5.0.0-alpha.32",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "date-fns": "^2.21.3",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-tree": "^0.15.0",
-    "react-number-format": "^4.5.2",
+    "react-number-format": "^4.6.0",
     "react-scripts": "4.0.3",
-    "validator": "^13.5.2",
-    "web-vitals": "^1.1.1"
+    "validator": "^13.6.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,18 +69,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "eslint": "7.23.0",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "eslint": "7.27.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "react-styleguidist": "^11.1.6",
     "tinycolor2": "^1.4.2"
   }
