--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.34",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
+    "@material-ui/icons": "^5.0.0-alpha.34",
     "@material-ui/lab": "^5.0.0-alpha.34",
     "@material-ui/styles": "^5.0.0-alpha.32",
     "@testing-library/jest-dom": "^5.12.0",
