--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "0.1.8",
+  "version": "1.0.0",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -16,18 +16,18 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.34",
-    "@material-ui/data-grid": "^4.0.0-alpha.30",
-    "@material-ui/icons": "^5.0.0-alpha.34",
-    "@material-ui/lab": "^5.0.0-alpha.34",
-    "@material-ui/styles": "^5.0.0-alpha.32",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@mui/x-data-grid": "^6.16.0",
+    "@mui/x-date-pickers": "^6.16.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "date-fns": "^2.22.1",
+    "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
