--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -14,30 +14,31 @@
   "main": "dist-modules",
   "module": "src",
   "dependencies": {
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@mui/x-data-grid": "^6.16.0",
     "@mui/x-date-pickers": "^6.16.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "date-fns": "^2.22.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-json-tree": "^0.15.0",
-    "react-number-format": "^4.6.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-json-tree": "^0.18.0",
+    "react-number-format": "^5.3.1",
     "react-scripts": "4.0.3",
-    "validator": "^13.6.0",
-    "web-vitals": "^1.1.2"
+    "validator": "^13.11.0",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -70,19 +71,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "eslint": "7.27.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.0",
-    "react-styleguidist": "^11.1.6",
-    "tinycolor2": "^1.4.2"
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "eslint": "8.50.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.3",
+    "react-styleguidist": "^11.2.0",
+    "tinycolor2": "^1.6.0"
   }
 }
