--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "1.0.39",
+  "version": "1.0.40",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-data-grid": "^6.18.5",
     "@mui/x-date-pickers": "^6.18.5",
     "@testing-library/jest-dom": "^6.1.5",
@@ -36,15 +37,15 @@
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
     "react-number-format": "^5.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "validator": "^13.11.0",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "styleguide": "styleguidist server",
     "styleguide:build": "rimraf docs && styleguidist build && mkdir docs && mv styleguide/* docs",
     "lint": "eslint .",
@@ -75,6 +76,7 @@
     "@babel/core": "^7.23.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.6",
+    "@craco/craco": "^7.1.0",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -84,7 +86,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.1",
-    "react-styleguidist": "^11.2.0",
+    "react-styleguidist": "^13.1.1",
     "tinycolor2": "^1.6.0"
   }
 }
