--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mui",
-  "version": "1.0.49",
+  "version": "1.0.54",
   "author": "Dinakaran S",
   "user": "dinakarans",
   "repository": {
@@ -14,19 +14,19 @@
   "main": "dist-modules",
   "module": "src",
   "dependencies": {
-    "@babel/eslint-parser": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
-    "@mui/x-charts": "^6.18.4",
-    "@mui/x-data-grid": "^6.18.6",
-    "@mui/x-date-pickers": "^6.18.6",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^6.19.3",
+    "@mui/x-data-grid": "^6.19.3",
+    "@mui/x-date-pickers": "^6.19.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
@@ -39,7 +39,7 @@
     "react-number-format": "^5.3.1",
     "react-scripts": "5.0.1",
     "validator": "^13.11.0",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "craco start",
@@ -72,21 +72,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.6",
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@craco/craco": "^7.1.0",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.1.1",
-    "react-styleguidist": "^13.1.1",
+    "prettier": "^3.2.5",
+    "react-styleguidist": "^13.1.2",
     "tinycolor2": "^1.6.0"
   }
 }
